- fix when (un)registering filters with the same method name but different class
  name (danilo)
- fix calling registered objects' methods with an empty argument list
  (marcello, messju)
 
Version 2.6.18 (Mar 7th, 2007)
------------------------------

- fix html_select_date separator when parts are missing (hayk,
  monte)
- fix broken detection of non-cached blocks introduced in 2.6.17
  (messju)

Version 2.6.17 (Mar 5th, 2007)
------------------------------

- fix php handling (monte, boots, danilo)
- fix handling of plugin tags directly followed by an else tag (Fahr, danilo)
- fix handling of $etc in the truncate modifier when $etc is longer
  than $length (Sylvinus, messju)
- fix handling of %I with mysql timestamps in the date_format modifier
  (danilo, boots)
- update smarty_core_write_file() and smarty_modifier_date_format() to better
  recognize Windows (boots, danilo)
- emulate %h, %n, %r, %R, %t in the date_format modifier on Windows 
  (danilo, boots)

Version 2.6.16 (Dec 1st, 2006)
------------------------------

- fixed replacement bug in trimwhitespace output filter that was introduced
  in the last release (Spuerhund, boots)

Version 2.6.15 (Nov 30th, 2006)
-------------------------------

- change file writing semantics in smarty_core_write_file() to unlink() only
  when rename() fails or a Windows system is detected (c960657, boots) 
- update debug.tpl to xhtml 1.1 compliance, fix javascript escaping in debug
  output and apply a Smarty based color scheme (cybot, boots)
- enhance reporting precision of debug_print_var modifier (cybot, boots) 
- make html_select_date work consistently with 0000-00-00 00:00:00 and
  0000-00-00 inputs (cybot, boots)
- fix wrong handling of insert's name attribute. (messju)
- fix false replacement of "$t" inside double quotes (checat, messju)
- added support for column headings and caption element to html_table and
  updated the output to use thead/tbody elements (boots)